deploy: 4b6444aaf718af1a8853f093354a17163369a366

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <script>(()=>{var t=window.matchMedia&&window.matchMedia("(prefers-color-scheme: dark)").matches,e=localStorage.getItem("theme");t&&e===null&&(localStorage.setItem("theme","dark"),document.documentElement.setAttribute("data-dark-mode","")),t&&e==="dark"&&document.documentElement.setAttribute("data-dark-mode",""),e==="dark"&&document.documentElement.setAttribute("data-dark-mode","")})()</script>
 
-  <link rel="stylesheet" href="https://fuzzypixelz.github.io/jam0004-docs/main.a690e432421adc6f3e6633dfb03c6c03a7ce4d0e9b9cb3aa2d0a05006dc7e3e4b386bce68992c7da7d642d998ceb9491aae46a41e77b22603585fbb281afb06b.css" integrity="sha512-ppDkMkIa3G8&#43;ZjPfsDxsA6fOTQ6bnLOqLQoFAG3H4&#43;SzhrzmiZLH2n1kLZmM65SRquRqQed7ImA1hfuyga&#43;waw==" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fuzzypixelz.github.io/jam0004-docs/main.bf5c8aa1f01ed92b4eccd504b1117b388a7c6b123acba0d10c6012949fb974898b96521d26c5a66a73243084919734a82ce7517dca234d2e472030e8fb16ce11.css" integrity="sha512-v1yKofAe2StOzNUEsRF7OIp8axI6y6DRDGASlJ&#43;5dImLllIdJsWmanMkMISRlzSoLOdRfcojTS5HIDDo&#43;xbOEQ==" crossorigin="anonymous">
 <noscript><style>img.lazyload { display: none; }</style></noscript>
   <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -310,7 +310,7 @@
 <script src="https://fuzzypixelz.github.io/jam0004-docs/js/bootstrap.min.650aeec64c81d69d4c0850fc73c93da3f0330cec0a27772feed7f90f60baa5f47f1c45687d71914bdafd1c4e860d40f6dc08ede27a2f08431ff929c9a2d24621.js" integrity="sha512-ZQruxkyB1p1MCFD8c8k9o/AzDOwKJ3cv7tf5D2C6pfR/HEVofXGRS9r9HE6GDUD23Ajt4novCEMf&#43;SnJotJGIQ==" crossorigin="anonymous" defer></script>
   <script src="https://fuzzypixelz.github.io/jam0004-docs/js/highlight.min.3f0a703c54cbed82ca277187e23cf2d272da28c15ce7e33cde685d40b53d741893d5b74d35bb2d20a81f56c289084f245bdd0c9145d39d7094d3dfbc62d1326a.js" integrity="sha512-PwpwPFTL7YLKJ3GH4jzy0nLaKMFc5&#43;M83mhdQLU9dBiT1bdNNbstIKgfVsKJCE8kW90MkUXTnXCU09&#43;8YtEyag==" crossorigin="anonymous" defer></script>
   <script src="https://fuzzypixelz.github.io/jam0004-docs/main.min.cb2e2ebbf2e4002f3117addc33582923b2b3ae5265c22944cd117ebec7abe61c170417c4506d7a0f8f0fc9053dfdf441421d53601ac467042ff3d06ec0ba07fa.js" integrity="sha512-yy4uu/LkAC8xF63cM1gpI7KzrlJlwilEzRF&#43;vser5hwXBBfEUG16D48PyQU9/fRBQh1TYBrEZwQv89BuwLoH&#43;g==" crossorigin="anonymous" defer></script>
-  <script src="https://fuzzypixelz.github.io/jam0004-docs/index.min.4e30cadcdceab5738744e8b3587b4da03f13c1fc29e8f7a0aa438e5a082d3ed21a59ba856652ad6ea92639f8157426469cebbf86cb4426cfdece4da54ac3516a.js" integrity="sha512-TjDK3NzqtXOHROizWHtNoD8Twfwp6PegqkOOWggtPtIaWbqFZlKtbqkmOfgVdCZGnOu/hstEJs/ezk2lSsNRag==" crossorigin="anonymous" defer></script>
+  <script src="https://fuzzypixelz.github.io/jam0004-docs/index.min.7cc09273239106cb4c8e54c1de989ee82c81590a900b21ab27c1532c6e52d44e76a3ef6ea05cadde6ff628f7621f14d1aa2e1af370c1c14dc18566975a0b1206.js" integrity="sha512-fMCScyORBstMjlTB3pie6CyBWQqQCyGrJ8FTLG5S1E52o&#43;9uoFyt3m/2KPdiHxTRqi4a83DBwU3BhWaXWgsSBg==" crossorigin="anonymous" defer></script>
   
     
   </body>
