--- a/playground/index.html
+++ b/playground/index.html
@@ -16,12 +16,12 @@
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <title> - Ludwig</title>
-<meta name="description" content="Playground # let melody = [4/B/3, 4/B/3, 4/C, 4/D, 4/D, 4/C, 4/B/3, 4/A/3, 4/G/3, 4/G/3, 4/A/3, 4/B/3, 4/B/3, 8/B/3, 8/A/3, 2/A/3, 4/B/3, 4/B/3, 4/C, 4/D, 4/D, 4/C, 4/B/3, 4/A/3] in let bass = [ (1/G/2 | 1/B/2 | 1/D/3), (1/F#/2 | 1/C/3 | 1/E/3), (1/G/2 | 1/B/2 | 1/D/3), (2/G/2 | 2/B/2 | 2/D/3), (2/F#/2 | 2/C/3 | 2/E/3), (1/G/2 | 1/B/2 | 1/D/3), (1/F#/2 | 1/C/3 | 1/E/3) ] in melody | bass Play ">
+<meta name="description" content="Playground # let hand1 = [4/B/3, 4/B/3, 4/C, 4/D, 4/D, 4/C, 4/B/3, 4/A/3, 4/G/3, 4/G/3, 4/A/3, 4/B/3, 4/B/3, 8/B/3, 8/A/3, 2/A/3, 4/B/3, 4/B/3, 4/C, 4/D, 4/D, 4/C, 4/B/3, 4/A/3] in let hand2 = [ (1/G/2 | 1/B/2 | 1/D/3), (1/F#/2 | 1/C/3 | 1/E/3), (1/G/2 | 1/B/2 | 1/D/3), (2/G/2 | 2/B/2 | 2/D/3), (2/F#/2 | 2/C/3 | 2/E/3), (1/G/2 | 1/B/2 | 1/D/3), (1/F#/2 | 1/C/3 | 1/E/3) ] in hand1 | hand2 Play ">
   <link rel="canonical" href="https://fuzzypixelz.github.io/jam0004-docs/playground/">
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
 <meta property="og:title" content="">
-<meta property="og:description" content="Playground # let melody = [4/B/3, 4/B/3, 4/C, 4/D, 4/D, 4/C, 4/B/3, 4/A/3, 4/G/3, 4/G/3, 4/A/3, 4/B/3, 4/B/3, 8/B/3, 8/A/3, 2/A/3, 4/B/3, 4/B/3, 4/C, 4/D, 4/D, 4/C, 4/B/3, 4/A/3] in let bass = [ (1/G/2 | 1/B/2 | 1/D/3), (1/F#/2 | 1/C/3 | 1/E/3), (1/G/2 | 1/B/2 | 1/D/3), (2/G/2 | 2/B/2 | 2/D/3), (2/F#/2 | 2/C/3 | 2/E/3), (1/G/2 | 1/B/2 | 1/D/3), (1/F#/2 | 1/C/3 | 1/E/3) ] in melody | bass Play ">
+<meta property="og:description" content="Playground # let hand1 = [4/B/3, 4/B/3, 4/C, 4/D, 4/D, 4/C, 4/B/3, 4/A/3, 4/G/3, 4/G/3, 4/A/3, 4/B/3, 4/B/3, 8/B/3, 8/A/3, 2/A/3, 4/B/3, 4/B/3, 4/C, 4/D, 4/D, 4/C, 4/B/3, 4/A/3] in let hand2 = [ (1/G/2 | 1/B/2 | 1/D/3), (1/F#/2 | 1/C/3 | 1/E/3), (1/G/2 | 1/B/2 | 1/D/3), (2/G/2 | 2/B/2 | 2/D/3), (2/F#/2 | 2/C/3 | 2/E/3), (1/G/2 | 1/B/2 | 1/D/3), (1/F#/2 | 1/C/3 | 1/E/3) ] in hand1 | hand2 Play ">
 <meta property="og:url" content="https://fuzzypixelz.github.io/jam0004-docs/playground/">
 <meta property="og:site_name" content="Ludwig">
 
@@ -215,11 +215,11 @@
       <h1 id="playground">Playground <a href="#playground" class="anchor" aria-hidden="true">#</a></h1>
 <div class="playground form-group">
 <textarea class="playground form-control is-search">
-let melody = [4/B/3, 4/B/3, 4/C, 4/D, 4/D, 4/C, 4/B/3, 4/A/3, 4/G/3, 4/G/3, 4/A/3, 4/B/3, 4/B/3, 8/B/3, 8/A/3, 2/A/3, 4/B/3, 4/B/3, 4/C, 4/D, 4/D, 4/C, 4/B/3, 4/A/3]
+let hand1 = [4/B/3, 4/B/3, 4/C, 4/D, 4/D, 4/C, 4/B/3, 4/A/3, 4/G/3, 4/G/3, 4/A/3, 4/B/3, 4/B/3, 8/B/3, 8/A/3, 2/A/3, 4/B/3, 4/B/3, 4/C, 4/D, 4/D, 4/C, 4/B/3, 4/A/3]
 in
-let bass = [ (1/G/2 | 1/B/2 | 1/D/3), (1/F#/2 | 1/C/3 | 1/E/3), (1/G/2 | 1/B/2 | 1/D/3), (2/G/2 | 2/B/2 | 2/D/3), (2/F#/2 | 2/C/3 | 2/E/3), (1/G/2 | 1/B/2 | 1/D/3), (1/F#/2 | 1/C/3 | 1/E/3) ] 
+let hand2 = [ (1/G/2 | 1/B/2 | 1/D/3), (1/F#/2 | 1/C/3 | 1/E/3), (1/G/2 | 1/B/2 | 1/D/3), (2/G/2 | 2/B/2 | 2/D/3), (2/F#/2 | 2/C/3 | 2/E/3), (1/G/2 | 1/B/2 | 1/D/3), (1/F#/2 | 1/C/3 | 1/E/3) ] 
 in
-melody | bass
+hand1 | hand2
 </textarea>
 <!-- This is a hack, please look the other way ;) -->
 <hr style="visibility: hidden">
@@ -259,7 +259,7 @@ melody | bass
 <script src="https://fuzzypixelz.github.io/jam0004-docs/js/bootstrap.min.650aeec64c81d69d4c0850fc73c93da3f0330cec0a27772feed7f90f60baa5f47f1c45687d71914bdafd1c4e860d40f6dc08ede27a2f08431ff929c9a2d24621.js" integrity="sha512-ZQruxkyB1p1MCFD8c8k9o/AzDOwKJ3cv7tf5D2C6pfR/HEVofXGRS9r9HE6GDUD23Ajt4novCEMf&#43;SnJotJGIQ==" crossorigin="anonymous" defer></script>
   <script src="https://fuzzypixelz.github.io/jam0004-docs/js/highlight.min.3f0a703c54cbed82ca277187e23cf2d272da28c15ce7e33cde685d40b53d741893d5b74d35bb2d20a81f56c289084f245bdd0c9145d39d7094d3dfbc62d1326a.js" integrity="sha512-PwpwPFTL7YLKJ3GH4jzy0nLaKMFc5&#43;M83mhdQLU9dBiT1bdNNbstIKgfVsKJCE8kW90MkUXTnXCU09&#43;8YtEyag==" crossorigin="anonymous" defer></script>
   <script src="https://fuzzypixelz.github.io/jam0004-docs/main.min.cb2e2ebbf2e4002f3117addc33582923b2b3ae5265c22944cd117ebec7abe61c170417c4506d7a0f8f0fc9053dfdf441421d53601ac467042ff3d06ec0ba07fa.js" integrity="sha512-yy4uu/LkAC8xF63cM1gpI7KzrlJlwilEzRF&#43;vser5hwXBBfEUG16D48PyQU9/fRBQh1TYBrEZwQv89BuwLoH&#43;g==" crossorigin="anonymous" defer></script>
-  <script src="https://fuzzypixelz.github.io/jam0004-docs/index.min.265d5179b40ffa83253e0bc5e071f4c2ffd6a8adf9bb4eecf51df65523c145e28cf17d5d86c5f3be072aaf395a18e989b40acc8b1ecdaecba9f887b50f258337.js" integrity="sha512-Jl1RebQP&#43;oMlPgvF4HH0wv/WqK35u07s9R32VSPBReKM8X1dhsXzvgcqrzlaGOmJtArMix7Nrsup&#43;Ie1DyWDNw==" crossorigin="anonymous" defer></script>
+  <script src="https://fuzzypixelz.github.io/jam0004-docs/index.min.9be11d0b0a6f52fc94f57d76c9a641ebf1200c8e09e22e921dbb63c78b7fff39c187c3968c69e63e23b2b3f18d1d680fc4a5184bc630a7421de78f69157792fc.js" integrity="sha512-m&#43;EdCwpvUvyU9X12yaZB6/EgDI4J4i6SHbtjx4t//znBh8OWjGnmPiOys/GNHWgPxKUYS8Ywp0Id549pFXeS/A==" crossorigin="anonymous" defer></script>
   
     
   </body>
