--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <script>(()=>{var t=window.matchMedia&&window.matchMedia("(prefers-color-scheme: dark)").matches,e=localStorage.getItem("theme");t&&e===null&&(localStorage.setItem("theme","dark"),document.documentElement.setAttribute("data-dark-mode","")),t&&e==="dark"&&document.documentElement.setAttribute("data-dark-mode",""),e==="dark"&&document.documentElement.setAttribute("data-dark-mode","")})()</script>
 
-  <link rel="stylesheet" href="https://fuzzypixelz.github.io/jam0004-docs/main.27ab29313ff800d5177b4a714218997938ed3c14c1f7b2105fb420fc82513b951df11944ddddcbdd06935afe79ecbe6a8d5d7ad812e399c2f60c9ce83e14520c.css" integrity="sha512-J6spMT/4ANUXe0pxQhiZeTjtPBTB97IQX7Qg/IJRO5Ud8RlE3d3L3QaTWv557L5qjV162BLjmcL2DJzoPhRSDA==" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fuzzypixelz.github.io/jam0004-docs/main.c7a8aaf3d9a1f7d3579918a9b322ee0363f79adfd3620f573cf8890024a505416e78201d98df679f23489d81d59c8ca9e2f82942798b8e1e709ba10ab999c4d6.css" integrity="sha512-x6iq89mh99NXmRipsyLuA2P3mt/TYg9XPPiJACSlBUFueCAdmN9nnyNInYHVnIyp4vgpQnmLjh5wm6EKuZnE1g==" crossorigin="anonymous">
 <noscript><style>img.lazyload { display: none; }</style></noscript>
   <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -201,13 +201,13 @@
     <div class="wrap container-xxl" role="document">
       <div class="content">
         
-<section class="section container-fluid mt-n3 pb-3">
+<section class="section container-fluid justify-content-center">
   <div class="row justify-content-center">
     <div class="col-lg-12 text-center">
       <h1 class="mt-0">Ludwig Documentation</h1>
     </div>
     <div class="col-lg-9 col-xl-8 text-center">
-      <p class="lead">Ludwig is a lazy functional logic programming language designed to compose and play music. Melodies played with one hand can be combined non-deterministically to form ever more elaborate music</p>
+      <p class="lead">Ludwig is a lazy functional logic programming language designed to compose and play music. Melodies played with one hand can be combined non-deterministically to form ever more elaborate music.</p>
       <a class="btn btn-primary btn-lg px-4 mb-2"
         href="https://fuzzypixelz.github.io/jam0004-docs/docs/prologue/introduction/"
         role="button">Get Started</a>
@@ -223,35 +223,19 @@
   <div class="container">
     <div class="row justify-content-center text-center">
       <div class="col-lg-5">
-        <h2 class="h4">Security aware</h2>
-        <p>Get A+ scores on <a href="https://observatory.mozilla.org/analyze/doks.netlify.app">Mozilla Observatory</a>
-          out of the box. Easily change the default Security Headers to suit your needs.</p>
+        <h2 class="h4">Powered by the Web™️</h2>
+        <p>Ludwig uses the excellent <a href="https://tonejs.github.io/">Tone.js</a> internally and can deployed as part
+          of your webapplication as minified JS library.</p>
       </div>
       <div class="col-lg-5">
-        <h2 class="h4">Fast by default ⚡️</h2>
-        <p>Get 100 scores on <a
-            href="https://googlechrome.github.io/lighthouse/viewer/?gist=59aafe464a68f8bc30b8e9a636d5b053">Google
-            Lighthouse</a> by default. Doks removes unused css, prefetches links, and lazy loads images.</p>
+        <h2 class="h4">Non-determinism</h2>
+        <p>Ludwig computations can have multiple values at the same time which translates to natural ways of composing
+          melodies.</p>
       </div>
       <div class="col-lg-5">
-        <h2 class="h4">SEO-ready</h2>
-        <p>Use sensible defaults for structured data, open graph, and Twitter cards. Or easily change the SEO settings
-          to your liking.</p>
-      </div>
-    </div>
-    <div class="row justify-content-center text-center">
-      <div class="col-lg-5">
-        <h2 class="h4">Full text search</h2>
-        <p>Search your Doks site with FlexSearch. Easily customize index settings and search options to your liking.</p>
-      </div>
-      <div class="col-lg-5">
-        <h2 class="h4">Page layouts</h2>
-        <p>Build pages with a landing page, blog, or documentation layout. Add custom sections and components to suit
-          your needs.</p>
-      </div>
-      <div class="col-lg-5">
-        <h2 class="h4">Dark mode</h2>
-        <p>Switch to a low-light UI with the click of a button. Change colors with variables to match your branding.</p>
+        <h2 class="h4">Simplicity</h2>
+        <p>Ludwig is made up of relatively few orthogonal language constructs. A programmer could learn the entire
+          language in one setting.</p>
       </div>
     </div>
   </div>
