--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
     <div class="wrap container-xxl" role="document">
       <div class="content">
         
+<script>
+document.body.parentElement.style = "height: 100%"
+document.body.style="height: 100%; display: grid"
+</script>
 <section class="section container-fluid justify-content-center">
   <div class="row justify-content-center">
     <div class="col-lg-12 text-center">
