deploy: e4e4c307a31b176eac19ce080e665d3e59867b8a

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 
   <script>(()=>{var t=window.matchMedia&&window.matchMedia("(prefers-color-scheme: dark)").matches,e=localStorage.getItem("theme");t&&e===null&&(localStorage.setItem("theme","dark"),document.documentElement.setAttribute("data-dark-mode","")),t&&e==="dark"&&document.documentElement.setAttribute("data-dark-mode",""),e==="dark"&&document.documentElement.setAttribute("data-dark-mode","")})()</script>
 
-  <link rel="stylesheet" href="https://fuzzypixelz.github.io/jam0004-docs/main.c7a8aaf3d9a1f7d3579918a9b322ee0363f79adfd3620f573cf8890024a505416e78201d98df679f23489d81d59c8ca9e2f82942798b8e1e709ba10ab999c4d6.css" integrity="sha512-x6iq89mh99NXmRipsyLuA2P3mt/TYg9XPPiJACSlBUFueCAdmN9nnyNInYHVnIyp4vgpQnmLjh5wm6EKuZnE1g==" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fuzzypixelz.github.io/jam0004-docs/main.749d32da5c48e0486a9a1c8e0695b6818d313a8ab359c36229f871fb041e828df060007fa239d8a6d0cf1a95933b9e125afb80ad9bc13f7c29a120e8b25baa04.css" integrity="sha512-dJ0y2lxI4EhqmhyOBpW2gY0xOoqzWcNiKfhx&#43;wQego3wYAB/ojnYptDPGpWTO54SWvuArZvBP3wpoSDosluqBA==" crossorigin="anonymous">
 <noscript><style>img.lazyload { display: none; }</style></noscript>
   <meta name="robots" content="noindex, follow">
 <title>404 Page not found - Ludwig</title>
