--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <script>(()=>{var t=window.matchMedia&&window.matchMedia("(prefers-color-scheme: dark)").matches,e=localStorage.getItem("theme");t&&e===null&&(localStorage.setItem("theme","dark"),document.documentElement.setAttribute("data-dark-mode","")),t&&e==="dark"&&document.documentElement.setAttribute("data-dark-mode",""),e==="dark"&&document.documentElement.setAttribute("data-dark-mode","")})()</script>
 
-  <link rel="stylesheet" href="https://fuzzypixelz.github.io/jam0004-docs/main.c7a8aaf3d9a1f7d3579918a9b322ee0363f79adfd3620f573cf8890024a505416e78201d98df679f23489d81d59c8ca9e2f82942798b8e1e709ba10ab999c4d6.css" integrity="sha512-x6iq89mh99NXmRipsyLuA2P3mt/TYg9XPPiJACSlBUFueCAdmN9nnyNInYHVnIyp4vgpQnmLjh5wm6EKuZnE1g==" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fuzzypixelz.github.io/jam0004-docs/main.749d32da5c48e0486a9a1c8e0695b6818d313a8ab359c36229f871fb041e828df060007fa239d8a6d0cf1a95933b9e125afb80ad9bc13f7c29a120e8b25baa04.css" integrity="sha512-dJ0y2lxI4EhqmhyOBpW2gY0xOoqzWcNiKfhx&#43;wQego3wYAB/ojnYptDPGpWTO54SWvuArZvBP3wpoSDosluqBA==" crossorigin="anonymous">
 <noscript><style>img.lazyload { display: none; }</style></noscript>
   <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -202,8 +202,8 @@
       <div class="content">
         
 <script>
-document.body.parentElement.style = "height: 100%"
-document.body.style="height: 100%; display: grid"
+  document.body.parentElement.style = "height: 100%"
+  document.body.style = "height: 100%; display: grid"
 </script>
 <section class="section container-fluid justify-content-center">
   <div class="row justify-content-center">
@@ -226,17 +226,17 @@ document.body.style="height: 100%; display: grid"
 <section class="section section-sm">
   <div class="container">
     <div class="row justify-content-center text-center">
-      <div class="col-lg-5">
+      <div class="col-lg-6">
         <h2 class="h4">Powered by the Web™️</h2>
         <p>Ludwig uses the excellent <a href="https://tonejs.github.io/">Tone.js</a> internally and can deployed as part
           of your webapplication as minified JS library.</p>
       </div>
-      <div class="col-lg-5">
+      <div class="col-lg-6">
         <h2 class="h4">Non-determinism</h2>
         <p>Ludwig computations can have multiple values at the same time which translates to natural ways of composing
           melodies.</p>
       </div>
-      <div class="col-lg-5">
+      <div class="col-lg-6">
         <h2 class="h4">Simplicity</h2>
         <p>Ludwig is made up of relatively few orthogonal language constructs. A programmer could learn the entire
           language in one setting.</p>
